# aa-base-plugin

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: automated-checks.yml  pypi-release.yml
base_plugin/: __init__.py  apps.py  auth_hooks.py  urls.py  views.py
base_plugin/templates/base_plugin/: index.html
example/: __init__.py
example/templates/example/: index.html
testauth/settings/: local.py
