[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "base-plugin"
description = "base_plugin description"
readme = "README.md"
keywords = [
    "allianceauth",
]
license = { file = "LICENSE" }
authors = [{ name = "Swashman(John Nelson)", email = "jnelson2288@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth<5.0.0,>=4",
]
[project.urls]
Documentation = "https://github.com/swashman/base_plugin#readme"
Homepage = "https://github.com/swashman/base_plugin"
Issues = "https://github.com/swashman/base_plugin/issues"

[tool.hatch.version]
path = "base_plugin/__init__.py"

[tool.hatch.build]
include = ["/base_plugin"]
